CTH box and laser puzzle side room doesn't hard require nymph, but it's annoying enough without it that we should logically require it

--- a/worlds/nine_sols/shared_static_logic/locations.jsonc
+++ b/worlds/nine_sols/shared_static_logic/locations.jsonc
@@ -290,7 +290,7 @@
     },
     {
         "address": 703, "name": "CTH: Side Room Near Right Exit",
-        "region": "CTH - Upper Right Exit", "requires": []
+        "region": "CTH - Upper Right Exit", "requires": [ { "item": "Mystic Nymph: Scout Mode" } ]
     },
     {
         "address": 704, "name": "CTH: Lower Left Vents",
