--- a/worlds/nine_sols/shared_static_logic/locations.jsonc
+++ b/worlds/nine_sols/shared_static_logic/locations.jsonc
@@ -676,7 +676,7 @@
     },
     {
         "address": 1808, "name": "Factory (U): Below Walkway to Left Exit",
-        "region": "FU - Middle Right Exit", "requires": [ { "anyOf": [
+        "region": "FU - Left Exit", "requires": [ { "anyOf": [
             { "item": "Air Dash" }, { "item": "Cloud Leap" }
         ] } ]
     },
