--- a/.gitignore
+++ b/.gitignore
@@ -201,3 +201,7 @@ minecraft_versions.json
 .LSOverride
 Thumbs.db
 [Dd]esktop.ini
+
+# Outer Wilds apworld generation
+worlds/outer_wilds.apworld
+worlds/outer_wilds_logic_options_experiment.apworld
