--- a/worlds/outer_wilds/shared_static_logic/connections.jsonc
+++ b/worlds/outer_wilds/shared_static_logic/connections.jsonc
@@ -33,10 +33,10 @@
     // and then get back to whichever warp pad connects to Hanging City Ceiling _in the same loop_.
     // I believe that requires either the Spaceship or a "warp path" from the Northern Glacier pad to
     // the Hanging City Ceiling pad. The warp path connection is conditionally added elsewhere if it exists.
-    { "from": "Hanging City Ceiling", "to": "Forge via Ship", "requires": [ { "item": "Launch Codes" } ] },
+    { "from": "Hanging City Ceiling", "to": "Forge via Ship & Warps", "requires": [ { "item": "Launch Codes" } ] },
     
-    { "from": "Forge via Ship", "to": "Black Hole Forge", "requires": [] },
-    { "from": "Forge via Warps", "to": "Black Hole Forge", "requires": [] },
+    { "from": "Forge via Ship & Warps", "to": "Black Hole Forge", "requires": [] },
+    { "from": "Forge via Warps Only", "to": "Black Hole Forge", "requires": [] },
 
     { "from": "Space", "to": "GD Ocean Depths", "requires": [ { "item": "Tornado Aerodynamic Adjustments" } ] },
     { "from": "GD Ocean Depths", "to": "GD Core", "requires": [ { "item": "Electrical Insulation" }, { "item": "Spacesuit" } ] },
