Reworked logic to not leave an unconnected region

--- a/worlds/outer_wilds/shared_static_logic/connections.jsonc
+++ b/worlds/outer_wilds/shared_static_logic/connections.jsonc
@@ -34,9 +34,8 @@
     // I believe that requires either the Spaceship or a "warp path" from the Northern Glacier pad to
     // the Hanging City Ceiling pad. The warp path connection is conditionally added elsewhere if it exists.
     { "from": "Hanging City Ceiling", "to": "Forge via Ship & Warps", "requires": [ { "item": "Launch Codes" } ] },
-    
     { "from": "Forge via Ship & Warps", "to": "Black Hole Forge", "requires": [] },
-    { "from": "Forge via Warps Only", "to": "Black Hole Forge", "requires": [] },
+    { "from": "Hanging City Ceiling", "to": "Forge via Warps Only", "requires": [] },
 
     { "from": "Space", "to": "GD Ocean Depths", "requires": [ { "item": "Tornado Aerodynamic Adjustments" } ] },
     { "from": "GD Ocean Depths", "to": "GD Core", "requires": [ { "item": "Electrical Insulation" }, { "item": "Spacesuit" } ] },
