--- a/worlds/nine_sols/shared_static_logic/items.jsonc
+++ b/worlds/nine_sols/shared_static_logic/items.jsonc
@@ -16,13 +16,13 @@
     { "code": 15, "name": "Cloud Leap", "type": "progression" },
     { "code": 16, "name": "Super Mutant Buster", "type": "progression" },
 
-    { "code": 21, "name": "Arrow: Cloud Piercer", "type": "useful" },
-    { "code": 22, "name": "Arrow: Thunder Buster", "type": "useful" },
-    { "code": 23, "name": "Arrow: Shadow Hunter", "type": "useful" },
+    { "code": 21, "name": "Arrow: Cloud Piercer", "type": "easy_tricks_logic" },
+    { "code": 22, "name": "Arrow: Thunder Buster", "type": "easy_tricks_logic" },
+    { "code": 23, "name": "Arrow: Shadow Hunter", "type": "easy_tricks_logic" },
 
     // "Material"s
     { "code": 31, "name": "Herb Catalyst", "type": "useful" },
-    { "code": 32, "name": "Dark Steel", "type": "useful" },
+    { "code": 32, "name": "Dark Steel", "type": "easy_tricks_logic" },
 
     // "Equipment"
     { "code": 41, "name": "Pipe Vial", "type": "useful" },
@@ -177,5 +177,8 @@
     { "code": null, "name": "Event - Kuafu in FSP", "type": "progression" },
     { "code": null, "name": "Event - Chiyou in FSP", "type": "progression" },
     { "code": null, "name": "Event - Jiequan 1 Fight Unlocked", "type": "progression" },
-    { "code": null, "name": "Event - Lady Ethereal Soulscape Unlocked", "type": "progression" }
+    { "code": null, "name": "Event - Lady Ethereal Soulscape Unlocked", "type": "progression" },
+
+    { "category": "easy_tricks", "code": null, "name": "Trick - Bow Hover", "type": "progression" },
+    { "category": "easy_tricks", "code": null, "name": "Trick - Break CS Barrier With Bow", "type": "progression" }
 ]
