--- a/worlds/nine_sols/shared_static_logic/locations.jsonc
+++ b/worlds/nine_sols/shared_static_logic/locations.jsonc
@@ -248,6 +248,23 @@
         "region": "CC - Root Node", "requires": [ { "item_group": "Sol Seals", "count": 4 } ]
     },
 
+    {
+        "category": "easy_tricks", "address": null, "name": "Trick - Bow Hover",
+        "region": "Menu", "requires": [ { "anyOf": [
+            { "item": "Arrow: Cloud Piercer" },
+            { "item": "Arrow: Thunder Buster" },
+            { "item": "Arrow: Shadow Hunter" }
+        ] } ]
+    },
+    {
+        "category": "easy_tricks", "address": null, "name": "Trick - Break CS Barrier With Bow",
+        "region": "Menu", "requires": [ { "anyOf": [
+            { "item": "Arrow: Cloud Piercer" },
+            { "item": "Dark Steel" }, // just 1 to afford Cloud Piercer S
+            { "item": "Event - Kuafu in FSP" } // so you can actually buy S from him
+        ] } ]
+    },
+
     // Cortex Center
     {
         "address": 601, "name": "Cortex Center: Defeat Lady Ethereal",
@@ -271,7 +288,10 @@
             { "item": "Charged Strike" }, // to break in
             { "item": "Mystic Nymph: Scout Mode" } // to unlock ropes, since we can't assume
                                                    // the single-use floor will be used optimally
-        ]
+        ],
+        "easy_tricks_requires": [ { "anyOf": [
+            { "item": "Trick - Break CS Barrier With Bow" }, { "item": "Charged Strike" } // to break in
+        ] } ] // then talisman dash if the floor's broken; there's a parryable enemy above this chamber
     },
     {
         "address": 606, "name": "Cortex Center: Near Left Exit",
