--- a/worlds/outer_wilds/shared_static_logic/connections.jsonc
+++ b/worlds/outer_wilds/shared_static_logic/connections.jsonc
@@ -305,9 +305,8 @@
     { "category": "hn2", "from": "Magistarium", "to": "Magistarium Dormitories", "requires": [ { "item": "Magistarium Dormitory Access Code" } ] },
     { "category": "hn2", "from": "Magistarium", "to": "Magistarium Engine Room", "requires": [ { "item": "Magistarium Engine Access Code" } ] },
     { "category": "hn2", "from": "Magistarium", "to": "Magistarium Outer Planes", "requires": [
-        { "item": "Magistarium Dormitory Access Code" }, // enter the Magister's room
-        { "item": "Memory Cube Interface" }, // close the hatch so you can safely remove your spacesuit
-        { "item": "Magistarium Engine Access Code" } // to get the battery
+        { "item": "Magistarium Dormitory Access Code" }, // enter the Magister's room and get the battery
+        { "item": "Memory Cube Interface" } // close the hatch so you can safely remove your spacesuit
     ] },
 
     { "category": "fq", "from": "Hourglass Twins", "to": "Lost Strings", "requires": [
