fix typo in Launch Memorial location name

--- a/worlds/nine_sols/shared_static_logic/locations.jsonc
+++ b/worlds/nine_sols/shared_static_logic/locations.jsonc
@@ -102,7 +102,7 @@
         "region": "CH - Center", "requires": []
     },
     {
-        "address": 402, "name": "Central Hall: Examine Launch Memoral",
+        "address": 402, "name": "Central Hall: Examine Launch Memorial",
         "region": "CH - Center", "requires": []
     },
     {
