--- a/worlds/outer_wilds/shared_static_logic/items.jsonc
+++ b/worlds/outer_wilds/shared_static_logic/items.jsonc
@@ -68,6 +68,7 @@
     { "code": 1734473761, "name": "Suit Puncture Trap", "type": "trap"},
     { "code": 1734473762, "name": "Map Disable Trap", "type": "trap"},
     { "code": 1734473763, "name": "HUD Corruption Trap", "type": "trap"},
+    { "code": 1734473764, "name": "Ice Physics Trap", "type": "trap"},
 
     { "category": "dlc|hn1|hn2|fq", "code": 1734473733, "name": "Stranger Light Modulator", "type": "progression" },
     { "category": "dlc", "code": 1734473734, "name": "Breach Override Codes", "type": "progression" },
