rename 'Sky Tower: Wall Climb Platform' to 'Sky Tower: Middle Right Chest'

--- a/worlds/nine_sols/shared_static_logic/locations.jsonc
+++ b/worlds/nine_sols/shared_static_logic/locations.jsonc
@@ -1243,7 +1243,7 @@
         "region": "ST - Lower Chest", "requires": []
     },
     {
-        "address": 3402, "name": "Sky Tower: Wall Climb Platform",
+        "address": 3402, "name": "Sky Tower: Middle Right Chest",
         "region": "ST - Middle Chest", "requires": []
     },
     {
